# Uber-ride-prediction

./: MLMODEL.ipynb  model.pkl  pyproject.toml  requirements.txt
