[project]
name = "machine-learning"
version = "0.1.0"
description = "this project is about predicting the price"
authors = [
    {name = "Abishek ruban"}
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
